--- a/src/Makefile
+++ b/src/Makefile
@@ -159,12 +159,12 @@ am__define_uniq_tagged_files = \
 ETAGS = etags
 CTAGS = ctags
 DISTFILES = $(DIST_COMMON) $(DIST_SOURCES) $(TEXINFOS) $(EXTRA_DIST)
-ACLOCAL = ${SHELL} /home/duplexa/git/emsar-2.0.1/config/missing aclocal-1.14
+ACLOCAL = ${SHELL} /home/duplexa/git/emsar/config/missing aclocal-1.14
 AMTAR = $${TAR-tar}
 AM_DEFAULT_VERBOSITY = 1
-AUTOCONF = ${SHELL} /home/duplexa/git/emsar-2.0.1/config/missing autoconf
-AUTOHEADER = ${SHELL} /home/duplexa/git/emsar-2.0.1/config/missing autoheader
-AUTOMAKE = ${SHELL} /home/duplexa/git/emsar-2.0.1/config/missing automake-1.14
+AUTOCONF = ${SHELL} /home/duplexa/git/emsar/config/missing autoconf
+AUTOHEADER = ${SHELL} /home/duplexa/git/emsar/config/missing autoheader
+AUTOMAKE = ${SHELL} /home/duplexa/git/emsar/config/missing automake-1.14
 AWK = mawk
 CC = gcc
 CCDEPMODE = depmode=gcc3
@@ -186,7 +186,7 @@ LDFLAGS =
 LIBOBJS = 
 LIBS = -lpthread -lm -lz
 LTLIBOBJS = 
-MAKEINFO = ${SHELL} /home/duplexa/git/emsar-2.0.1/config/missing makeinfo
+MAKEINFO = ${SHELL} /home/duplexa/git/emsar/config/missing makeinfo
 MKDIR_P = /bin/mkdir -p
 OBJEXT = o
 PACKAGE = emsar
@@ -201,10 +201,10 @@ SET_MAKE =
 SHELL = /bin/bash
 STRIP = 
 VERSION = 2.0.1
-abs_builddir = /home/duplexa/git/emsar-2.0.1/src
-abs_srcdir = /home/duplexa/git/emsar-2.0.1/src
-abs_top_builddir = /home/duplexa/git/emsar-2.0.1
-abs_top_srcdir = /home/duplexa/git/emsar-2.0.1
+abs_builddir = /home/duplexa/git/emsar/src
+abs_srcdir = /home/duplexa/git/emsar/src
+abs_top_builddir = /home/duplexa/git/emsar
+abs_top_srcdir = /home/duplexa/git/emsar
 ac_ct_CC = gcc
 am__include = include
 am__leading_dot = .
@@ -223,7 +223,7 @@ host_alias =
 htmldir = ${docdir}
 includedir = ${prefix}/include
 infodir = ${datarootdir}/info
-install_sh = ${SHELL} /home/duplexa/git/emsar-2.0.1/config/install-sh
+install_sh = ${SHELL} /home/duplexa/git/emsar/config/install-sh
 libdir = ${exec_prefix}/lib
 libexecdir = ${exec_prefix}/libexec
 localedir = ${datarootdir}/locale
